# Tang

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TANG.sln  build_project.bat  premake5.lua  vs-chromium-project.txt
SceneDemo/: premake5.lua
SceneDemo/src/: default_material.h  main.cpp  vertex_types.h
SceneDemo/src/asset_utils/: asset_loader.cpp  asset_loader.h  asset_manager.cpp  asset_manager.h
SceneDemo/src/camera/: base_camera.cpp  freefly_camera.cpp
SceneDemo/src/passes/: base_pass.h  bloom_pass.cpp  bloom_pass.h  cubemap_preprocessing_pass.cpp  cubemap_preprocessing_pass.h  ldr_pass.cpp  ldr_pass.h  skybox_pass.h
SceneDemo/src/pipelines/: bloom_downscaling_pipeline.cpp  brdf_convolution_pipeline.h  ldr_pipeline.cpp  pbr_pipeline.h  prefilter_map_pipeline.cpp  skybox_pipeline.cpp
SceneDemo/src/render_passes/: brdf_convolution_render_pass.cpp  brdf_convolution_render_pass.h  cubemap_preprocessing_render_pass.cpp  cubemap_preprocessing_render_pass.h  hdr_render_pass.cpp  hdr_render_pass.h  ldr_render_pass.cpp  ldr_render_pass.h
TANG/: premake5.lua
TANG/src/: asset_loader.cpp  asset_manager.cpp  asset_manager.h  asset_types.h  base_pipeline.cpp  base_pipeline.h  callback_types.h  command_pool_registry.cpp  command_pool_registry.h  config.h  default_material.h  device_cache.h  frame_data.h  framebuffer.cpp  framebuffer.h  input_manager.h  main.cpp  main_window.cpp  main_window.h  queue_family_indices.cpp  queue_family_indices.h  queue_types.h  renderer.cpp  renderer.h  shader.cpp  tang.cpp  tang.h  texture_resource.cpp  texture_resource.h  ubo_structs.h  vertex_types.h
TANG/src/camera/: base_camera.cpp  base_camera.h  freefly_camera.cpp  freefly_camera.h
TANG/src/cmd_buffer/: command_buffer.cpp  command_buffer.h  disposable_command.cpp  disposable_command.h  primary_command_buffer.cpp  primary_command_buffer.h  secondary_command_buffer.cpp  secondary_command_buffer.h
TANG/src/data_buffer/: buffer.cpp  buffer.h  index_buffer.cpp  shader_storage_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.h
TANG/src/descriptors/: descriptor_allocator.h  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  write_descriptor_set.cpp
TANG/src/passes/: base_pass.cpp  base_pass.h  bloom_pass.cpp  bloom_pass.h  cubemap_preprocessing_pass.cpp  cubemap_preprocessing_pass.h  ldr_pass.cpp  ldr_pass.h  pbr_pass.cpp  pbr_pass.h  skybox_pass.cpp  skybox_pass.h
TANG/src/pipelines/: base_pipeline.cpp  base_pipeline.h  bloom_composition_pipeline.cpp  bloom_downscaling_pipeline.h  bloom_upscaling_pipeline.h  irradiance_sampling_pipeline.cpp  ldr_pipeline.h  skybox_pipeline.h
TANG/src/render_pass/: base_render_pass.cpp  base_render_pass.h  core_render_pass.cpp  core_render_pass.h
TANG/src/render_passes/: base_render_pass.h  cubemap_preprocessing_render_pass.h  hdr_render_pass.cpp  hdr_render_pass.h  ldr_render_pass.cpp  ldr_render_pass.h
TANG/src/sync_objects/: fence.cpp  fence.h  semaphore.cpp  semaphore.h
TANG/src/utils/: file_utils.cpp  logger.cpp  logger.h  mouse_declarations.h  mouse_mappings.h  sanity_check.h  vec_types.h  (+1 more)
TANG/tools/: build_shaders.bat  copy_header_files.bat
src/: asset_loader.cpp  asset_loader.h  asset_types.h  command_pool_registry.cpp  command_pool_registry.h  config.h  device_cache.cpp  device_cache.h  framebuffer.cpp  framebuffer.h  input.cpp  input.h  input_manager.cpp  input_manager.h  log_utils.h  main.cpp  main_window.cpp  main_window.h  queue_family_indices.cpp  queue_family_indices.h  queue_types.h  renderer.cpp  renderer.h  shader.cpp  shader.h  tang.cpp  tang.h  texture_resource.cpp  texture_resource.h  vertex_type.h  vertex_types.h  window.cpp  window.h
src/buffer/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/camera/: base_camera.cpp  base_camera.h  freefly_camera.cpp  freefly_camera.h
src/cmd_buffer/: command_buffer.cpp  command_buffer.h  disposable_command.cpp  disposable_command.h  primary_command_buffer.cpp  primary_command_buffer.h  secondary_command_buffer.cpp  secondary_command_buffer.h
src/data_buffer/: buffer.cpp  buffer.h  compute_buffer.cpp  compute_buffer.h  index_buffer.cpp  index_buffer.h  shader_storage_buffer.cpp  staging_buffer.cpp  staging_buffer.h  uniform_buffer.cpp  uniform_buffer.h  vertex_buffer.cpp  vertex_buffer.h
src/descriptors/: descriptor_allocator.cpp  descriptor_allocator.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptors.cpp  descriptors.h  write_descriptor_set.cpp  write_descriptor_set.h
src/passes/: base_pass.cpp  base_pass.h  bloom_pass.cpp  bloom_pass.h  cubemap_preprocessing_pass.cpp  cubemap_preprocessing_pass.h  skybox_pass.cpp  skybox_pass.h
src/pipelines/: base_pipeline.cpp  base_pipeline.h  bloom_composition_pipeline.cpp  bloom_composition_pipeline.h  bloom_downscaling_pipeline.cpp  bloom_prefilter_pipeline.cpp  bloom_prefilter_pipeline.h  bloom_upscaling_pipeline.cpp  bloom_upscaling_pipeline.h  brdf_convolution_pipeline.cpp  brdf_convolution_pipeline.h  cubemap_preprocessing_pipeline.cpp  cubemap_preprocessing_pipeline.h  irradiance_sampling_pipeline.cpp  irradiance_sampling_pipeline.h  ldr_pipeline.cpp  ldr_pipeline.h  pbr_pipeline.cpp  pbr_pipeline.h  prefilter_map_pipeline.cpp  prefilter_map_pipeline.h  prefilter_skybox_pipeline.cpp  prefilter_skybox_pipeline.h  skybox_pipeline.cpp  skybox_pipeline.h
src/render_passes/: base_render_pass.cpp  base_render_pass.h  brdf_convolution_render_pass.cpp  brdf_convolution_render_pass.h  cubemap_preprocessing_render_pass.cpp  hdr_render_pass.cpp  hdr_render_pass.h  ldr_render_pass.cpp  ldr_render_pass.h  pbr_render_pass.cpp  pbr_render_pass.h
src/shaders/: shader.cpp  shader.frag  shader.h  shader.vert  shader_data.h
src/utils/: assert.h  file_utils.cpp  file_utils.h  key_declarations.h  key_mappings.h  key_types.h  logger.cpp  logger.h  sanity_check.h  uuid.cpp  uuid.h
utils/: build_project.bat  build_shaders.bat  compile_shaders.bat  setup.bat
utils/python/: build_shaders.py  compile_shaders.py
(+55 files in other folders)
